--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             var minutes = now.getMinutes();
             var seconds = now.getSeconds();
             var day = now.getDate();
-            var month = now.getMonth() + 1; // Tháng bắt đầu từ 0
+            var month = now.getMonth() + 1;
             var year = now.getFullYear();
 
             hours = (hours < 10 ? "0" : "") + hours;
@@ -21,11 +21,9 @@
             var timeString = hours + ":" + minutes + ":" + seconds;
             document.getElementById("clock").innerHTML = timeString;
 
-            // Cập nhật ngày
             var dateString = `Hôm nay là ngày ${day}/${month}/${year}`;
             document.getElementById("dateDisplay").innerHTML = dateString;
 
-            // Cập nhật tiêu đề
             document.title = `Key Ngày ${day}/${month}/${year} Là`;
 
             setTimeout(updateTime, 1000);
@@ -35,10 +33,18 @@
             const urlParams = new URLSearchParams(window.location.search);
             const key = urlParams.get('ma');
             const keyInput = document.getElementById('keyInput');
-            if (key) {
+            const copyBtn = document.getElementById('copyBtn');
+            const mainContainer = document.getElementById('mainContainer');
+            
+            // Kiểm tra key có tồn tại và đúng format PHONG-TUS-
+            if (key && key.startsWith("PHONG-TUS-")) {
+                // Key hợp lệ - hiển thị key
                 keyInput.value = key;
+                copyBtn.style.display = "block"; // Hiện nút Copy
             } else {
-                keyInput.value = 'No key found';
+                // Key không hợp lệ hoặc không có key - chặn web
+                document.body.innerHTML = '<div style="display: flex; justify-content: center; align-items: center; height: 100vh; font-family: Arial, sans-serif; font-size: 24px; color: #f60000; text-align: center;">VUI LÒNG LẤY LINK TỪ TOOL</div>';
+                return;
             }
         }
 
@@ -46,7 +52,7 @@
             const keyInput = document.getElementById('keyInput');
             keyInput.select();
             document.execCommand('copy');
-            alert('Key copied to clipboard: ' + keyInput.value);
+            alert('Đã copy key: ' + keyInput.value);
         }
 
         function toggleMusic() {
@@ -114,6 +120,8 @@
             border: 2px solid #fc0303;
             border-radius: 8px;
             font-size: 16px;
+            font-weight: bold;
+            background-color: #f8f8f8;
             transition: border-color 0.3s ease-in-out;
         }
         input:hover, input:focus {
@@ -129,9 +137,13 @@
             font-size: 16px;
             transition: background-color 0.3s ease-in-out;
             margin-bottom: 10px;
+            width: 200px;
         }
         button:hover {
             background-color: #e9514d;
+        }
+        #copyBtn {
+            display: none; /* Mặc định ẩn nút Copy */
         }
         .footer {
             text-align: center;
@@ -139,20 +151,28 @@
             color: #555;
             font-size: 14px;
         }
+        .admin-link {
+            color: #ef8682;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .admin-link:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
-    <!-- Bật nhạc nền -->
+    <!-- Nhạc nền -->
     <audio id="backgroundMusic" loop>
         <source src="https://rr4---sn-npoeens7.googlevideo.com/videoplayback?expire=1738570417&ei=USagZ4Vk6_nE3w-x7KCJBg&ip=172.64.236.154&id=o-AAimGCMhLlnkFgQqbULLm4c5rLQiwpJXAB9aLLiMq4KH&itag=140&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&bui=AY2Et-NhXWJuEA_aAiv4s4CMjS0GNJ5kVy9qweCNCESmMcFo7gwC7u2n02jFCTAEYi17h2MNMEdZl1cQ&spc=9kzgDe0cTB4wLXbrqCENjNXF39FeMaXArlp1tUthP0Mj7BFN6PRwObzbGw&vprv=1&svpuc=1&mime=audio%2Fmp4&ns=ciOnzHLpGKSoPvsrdclhYhoQ&rqh=1&gir=yes&clen=12915678&dur=798.000&lmt=1726163663589433&keepalive=yes&lmw=1&fexp=24350590,24350737,24350827,24350933,24350961,24350977,24350999,24351028,24351059,24351082,51326932,51371294&c=TVHTML5&sefc=1&txp=5432434&n=oOVy0aSPT2m58w&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Cbui%2Cspc%2Cvprv%2Csvpuc%2Cmime%2Cns%2Crqh%2Cgir%2Cclen%2Cdur%2Clmt&sig=AJfQdSswRAIgdqeR7ocPNLzfZ8ZpZkVJl9uhPiHnTmW-oIiDy0YosScCIGMbR3y4GUPaOW9VkEYfsnYGZDMJ1_1ub20amE3pVmcd&title=Cari+Pokemon+-+Mit+x+AM+Remix+%E2%9C%AA+Mochi+Entertainment+%7C%7C+Nh%E1%BA%A1c+Hot+Tiktok+Hay+Nh%E1%BA%A5t+2023%23mochi&rm=sn-h5q6l7l&rrc=104,80&req_id=442fafdb2aeca3ee&ipbypass=yes&redirect_counter=2&cm2rm=sn-8qj-2m0e7s&cms_redirect=yes&cmsv=e&met=1738548821,&mh=0l&mip=2001:ee0:4e1d:40f0:9918:bf84:9f64:6e22&mm=29&mn=sn-npoeens7&ms=rdu&mt=1738548536&mv=m&mvi=4&pl=48&rms=rdu,au&lsparams=ipbypass,met,mh,mip,mm,mn,ms,mv,mvi,pl,rms&lsig=AGluJ3MwRgIhAPO94cqTh07m1khvJ4OP-lmnxEMqYdMS4DdevPGj-IEbAiEAmoIOxCicTNa-4Z5bebL0gq_d-TwAiwySZjFQUB5sSu8%3D" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
-    <div class="loading-container">
-        <h1>Key Ngày Là</h1>
+    <div class="loading-container" id="mainContainer">
+        <h1>Key Của Bạn Là</h1>
         <div class="key-container">
             <input type="text" id="keyInput" readonly>
-            <button onclick="copyToClipboard()">Copy Key</button>
+            <button id="copyBtn" onclick="copyToClipboard()">Copy Key</button>
             <button id="musicButton" onclick="toggleMusic()">Play Music</button>
         </div>
         <div id="dateDisplay" style="margin-top: 10px; font-size: 18px; color: #555;"></div>
