--- a/index.html
+++ b/index.html
@@ -1,78 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Key Ngày Hôm Nay Là</title>
-    <script>
-        function updateTime() {
-            var now = new Date();
-            var hours = now.getHours();
-            var minutes = now.getMinutes();
-            var seconds = now.getSeconds();
-            var day = now.getDate();
-            var month = now.getMonth() + 1;
-            var year = now.getFullYear();
-
-            hours = (hours < 10 ? "0" : "") + hours;
-            minutes = (minutes < 10 ? "0" : "") + minutes;
-            seconds = (seconds < 10 ? "0" : "") + seconds;
-
-            var timeString = hours + ":" + minutes + ":" + seconds;
-            document.getElementById("clock").innerHTML = timeString;
-
-            var dateString = `Hôm nay là ngày ${day}/${month}/${year}`;
-            document.getElementById("dateDisplay").innerHTML = dateString;
-
-            document.title = `Key Ngày ${day}/${month}/${year} Là`;
-
-            setTimeout(updateTime, 1000);
-        }
-
-        function getQueryParam() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const key = urlParams.get('ma');
-            const keyInput = document.getElementById('keyInput');
-            const copyBtn = document.getElementById('copyBtn');
-            const mainContainer = document.getElementById('mainContainer');
-            
-            // Kiểm tra key có tồn tại và đúng format PHONG-TUS-
-            if (key && key.startsWith("PHONG-TUS-")) {
-                // Key hợp lệ - hiển thị key
-                keyInput.value = key;
-                copyBtn.style.display = "block"; // Hiện nút Copy
-            } else {
-                // Key không hợp lệ hoặc không có key - chặn web
-                document.body.innerHTML = '<div style="display: flex; justify-content: center; align-items: center; height: 100vh; font-family: Arial, sans-serif; font-size: 24px; color: #f60000; text-align: center;">VUI LÒNG LẤY LINK TỪ TOOL</div>';
-                return;
-            }
-        }
-
-        function copyToClipboard() {
-            const keyInput = document.getElementById('keyInput');
-            keyInput.select();
-            document.execCommand('copy');
-            alert('Đã copy key: ' + keyInput.value);
-        }
-
-        function toggleMusic() {
-            const music = document.getElementById('backgroundMusic');
-            const musicButton = document.getElementById('musicButton');
-
-            if (music.paused) {
-                music.play();
-                musicButton.textContent = 'Pause Music';
-            } else {
-                music.pause();
-                musicButton.textContent = 'Play Music';
-            }
-        }
-
-        window.onload = function () {
-            updateTime();
-            getQueryParam();
-        };
-    </script>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -88,94 +19,41 @@
             padding: 20px;
             border: 2px solid #ef8682;
             border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 20px rgba(0,0,0,0.2);
             background-color: #fff;
             animation: pulse 1.5s infinite;
             width: 80vw;
-            max-width: 400px;
+            max-width: 420px;
         }
         @keyframes pulse {
-            0%, 100% {
-                border-color: #ef8682;
-            }
-            50% {
-                border-color: #e9514d;
-            }
+            0%,100% { border-color: #ef8682; }
+            50% { border-color: #e9514d; }
         }
-        h1 {
-            color: #03fcec;
-            font-size: 28px;
-            margin-bottom: 20px;
-        }
-        .key-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        input {
-            text-align: center;
-            width: 80%;
-            padding: 12px;
-            margin-bottom: 20px;
-            border: 2px solid #fc0303;
-            border-radius: 8px;
-            font-size: 16px;
-            font-weight: bold;
-            background-color: #f8f8f8;
-            transition: border-color 0.3s ease-in-out;
-        }
-        input:hover, input:focus {
-            border-color: #e9514d;
-        }
-        button {
-            background-color: #ef8682;
-            color: #fff;
-            padding: 12px 24px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease-in-out;
-            margin-bottom: 10px;
-            width: 200px;
-        }
-        button:hover {
-            background-color: #e9514d;
-        }
-        #copyBtn {
-            display: none; /* Mặc định ẩn nút Copy */
-        }
-        .footer {
-            text-align: center;
-            margin-top: 20px;
-            color: #555;
-            font-size: 14px;
-        }
-        .admin-link {
-            color: #ef8682;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .admin-link:hover {
-            text-decoration: underline;
-        }
+        h1 { color:#03fcec; font-size:28px; margin-bottom:20px; }
+        .key-container { display:flex; flex-direction:column; align-items:center; }
+        input { text-align:center; width:80%; padding:12px; margin-bottom:20px; border:2px solid:#fc0303; border-radius:8px; font-size:16px; background:#f8f8f8; font-weight:bold; }
+        input:hover, input:focus { border-color:#e9514d; }
+        .button-group { display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
+        button { background:#ef8682; color:#fff; padding:12px 24px; border:none; border-radius:8px; cursor:pointer; font-size:16px; transition:background-color .3s; min-width:140px; }
+        button:hover { background:#e9514d; }
+        .footer { text-align:center; margin-top:20px; color:#555; font-size:14px; }
+        .admin-link { color:#ef8682; text-decoration:none; font-weight:bold; }
+        .admin-link:hover { text-decoration:underline; }
+        .key-label { font-size:14px; color:#888; margin-bottom:5px; }
     </style>
 </head>
 <body>
-    <!-- Nhạc nền -->
-    <audio id="backgroundMusic" loop>
-        <source src="https://rr4---sn-npoeens7.googlevideo.com/videoplayback?expire=1738570417&ei=USagZ4Vk6_nE3w-x7KCJBg&ip=172.64.236.154&id=o-AAimGCMhLlnkFgQqbULLm4c5rLQiwpJXAB9aLLiMq4KH&itag=140&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&bui=AY2Et-NhXWJuEA_aAiv4s4CMjS0GNJ5kVy9qweCNCESmMcFo7gwC7u2n02jFCTAEYi17h2MNMEdZl1cQ&spc=9kzgDe0cTB4wLXbrqCENjNXF39FeMaXArlp1tUthP0Mj7BFN6PRwObzbGw&vprv=1&svpuc=1&mime=audio%2Fmp4&ns=ciOnzHLpGKSoPvsrdclhYhoQ&rqh=1&gir=yes&clen=12915678&dur=798.000&lmt=1726163663589433&keepalive=yes&lmw=1&fexp=24350590,24350737,24350827,24350933,24350961,24350977,24350999,24351028,24351059,24351082,51326932,51371294&c=TVHTML5&sefc=1&txp=5432434&n=oOVy0aSPT2m58w&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Cbui%2Cspc%2Cvprv%2Csvpuc%2Cmime%2Cns%2Crqh%2Cgir%2Cclen%2Cdur%2Clmt&sig=AJfQdSswRAIgdqeR7ocPNLzfZ8ZpZkVJl9uhPiHnTmW-oIiDy0YosScCIGMbR3y4GUPaOW9VkEYfsnYGZDMJ1_1ub20amE3pVmcd&title=Cari+Pokemon+-+Mit+x+AM+Remix+%E2%9C%AA+Mochi+Entertainment+%7C%7C+Nh%E1%BA%A1c+Hot+Tiktok+Hay+Nh%E1%BA%A5t+2023%23mochi&rm=sn-h5q6l7l&rrc=104,80&req_id=442fafdb2aeca3ee&ipbypass=yes&redirect_counter=2&cm2rm=sn-8qj-2m0e7s&cms_redirect=yes&cmsv=e&met=1738548821,&mh=0l&mip=2001:ee0:4e1d:40f0:9918:bf84:9f64:6e22&mm=29&mn=sn-npoeens7&ms=rdu&mt=1738548536&mv=m&mvi=4&pl=48&rms=rdu,au&lsparams=ipbypass,met,mh,mip,mm,mn,ms,mv,mvi,pl,rms&lsig=AGluJ3MwRgIhAPO94cqTh07m1khvJ4OP-lmnxEMqYdMS4DdevPGj-IEbAiEAmoIOxCicTNa-4Z5bebL0gq_d-TwAiwySZjFQUB5sSu8%3D" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-
-    <div class="loading-container" id="mainContainer">
-        <h1>Key Của Bạn Là</h1>
+    <div class="loading-container">
+        <h1>🔑 KEY CỦA BẠN LÀ</h1>
+        <div class="key-label">(Key tự động tạo hoặc lấy từ tham số ma)</div>
         <div class="key-container">
             <input type="text" id="keyInput" readonly>
-            <button id="copyBtn" onclick="copyToClipboard()">Copy Key</button>
-            <button id="musicButton" onclick="toggleMusic()">Play Music</button>
+            <div class="button-group">
+                <button id="copyButton" onclick="copyToClipboard()">📋 Copy Key</button>
+                <button id="musicButton" onclick="toggleMusic()">▶️ Play Music</button>
+            </div>
         </div>
-        <div id="dateDisplay" style="margin-top: 10px; font-size: 18px; color: #555;"></div>
+        <div id="dateDisplay" style="margin-top:10px; font-size:18px; color:#555"></div>
         <div class="footer">
             <b>Copyright By 
                 <a href="https://zalo.me/0822771058" class="admin-link">Nguyễn Duy Khánh</a> | 
@@ -183,5 +61,158 @@
             </b>
         </div>
     </div>
+
+    <!-- YouTube player (ẩn) -->
+    <div id="yt-player-container" style="position:absolute; left:-9999px; width:1px; height:1px; overflow:hidden;">
+        <div id="ytPlayer"></div>
+    </div>
+
+    <script>
+        // ---------- KEY + TIME + UTILS (giữ nguyên logic của bạn, chỉ điều chỉnh nhẹ) ----------
+        function generateRandomKey() {
+            const prefix = "PHONG-TUS-";
+            const characters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+            let randomPart = "";
+            for (let i = 0; i < 16; i++) {
+                randomPart += characters.charAt(Math.floor(Math.random() * characters.length));
+            }
+            return prefix + randomPart;
+        }
+        function markKeyAsUsed(key) {
+            let usedKeys = JSON.parse(localStorage.getItem('usedKeys') || '[]');
+            if (!usedKeys.includes(key)) {
+                usedKeys.push(key);
+                localStorage.setItem('usedKeys', JSON.stringify(usedKeys));
+            }
+        }
+        function isKeyUsed(key) {
+            let usedKeys = JSON.parse(localStorage.getItem('usedKeys') || '[]');
+            return usedKeys.includes(key);
+        }
+        function generateUniqueKey() {
+            let maxAttempts = 100;
+            let attempts = 0;
+            let newKey;
+            do {
+                newKey = generateRandomKey();
+                attempts++;
+                if (attempts > maxAttempts) {
+                    localStorage.setItem('usedKeys', '[]');
+                    break;
+                }
+            } while (isKeyUsed(newKey));
+            return newKey;
+        }
+        function updateTime() {
+            var now = new Date();
+            var hours = now.getHours();
+            var minutes = now.getMinutes();
+            var seconds = now.getSeconds();
+            var day = now.getDate();
+            var month = now.getMonth() + 1;
+            var year = now.getFullYear();
+            hours = (hours < 10 ? "0" : "") + hours;
+            minutes = (minutes < 10 ? "0" : "") + minutes;
+            seconds = (seconds < 10 ? "0" : "") + seconds;
+            var timeString = hours + ":" + minutes + ":" + seconds;
+            document.getElementById("clock").innerHTML = timeString;
+            var dateString = `Hôm nay là ngày ${day}/${month}/${year}`;
+            document.getElementById("dateDisplay").innerHTML = dateString;
+            document.title = `Key Ngày ${day}/${month}/${year} Là`;
+            setTimeout(updateTime, 1000);
+        }
+        function handleQueryParams() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const ma = urlParams.get('ma');
+            const getkey = urlParams.get('getkey');
+            const keyInput = document.getElementById('keyInput');
+            if (getkey === '1') {
+                const newKey = generateUniqueKey();
+                keyInput.value = newKey;
+                markKeyAsUsed(newKey);
+                console.log('Đã tạo key mới:', newKey);
+            } else if (ma) {
+                keyInput.value = ma;
+            } else {
+                const defaultKey = generateRandomKey();
+                keyInput.value = defaultKey;
+            }
+        }
+        function copyToClipboard() {
+            const keyInput = document.getElementById('keyInput');
+            keyInput.select();
+            keyInput.setSelectionRange(0, 99999);
+            document.execCommand('copy');
+            const copyBtn = document.getElementById('copyButton');
+            const originalText = copyBtn.textContent;
+            copyBtn.textContent = '✅ Đã copy!';
+            setTimeout(() => { copyBtn.textContent = originalText; }, 2000);
+        }
+
+        window.onload = function() {
+            updateTime();
+            handleQueryParams();
+        };
+
+        // ---------- YOUTUBE IFRAME PLAYER SETUP ----------
+        // ID video YouTube bạn gửi: UKox4YEvLpg
+        const YT_VIDEO_ID = 'UKox4YEvLpg';
+        let ytPlayer = null;
+        // Load IFrame API
+        (function loadYouTubeAPI(){
+            const tag = document.createElement('script');
+            tag.src = "https://www.youtube.com/iframe_api";
+            document.head.appendChild(tag);
+        })();
+
+        // This function will be called by the YouTube API when it's ready
+        function onYouTubeIframeAPIReady() {
+            ytPlayer = new YT.Player('ytPlayer', {
+                height: '0',
+                width: '0',
+                videoId: YT_VIDEO_ID,
+                playerVars: {
+                    'playsinline': 1,
+                    'autoplay': 0,     // không tự autoplay khi load trang (phần lớn trình duyệt chặn)
+                    'controls': 0,
+                    'rel': 0,
+                    'loop': 1,
+                    'playlist': YT_VIDEO_ID,
+                    'modestbranding': 1,
+                    'iv_load_policy': 3
+                },
+                events: {
+                    'onReady': function(event){
+                        // Tùy ý: đặt volume mặc định (0-100)
+                        try { event.target.setVolume(60); } catch(e){}
+                    },
+                    'onStateChange': function(e){
+                        // có thể xử lý trạng thái nếu cần
+                    }
+                }
+            });
+        }
+
+        // Toggle play/pause bằng YouTube player
+        function toggleMusic() {
+            const musicButton = document.getElementById('musicButton');
+            if (!ytPlayer || typeof ytPlayer.getPlayerState !== 'function') {
+                // nếu player chưa sẵn sàng, báo cho user
+                musicButton.textContent = '⌛ Đang tải...';
+                setTimeout(() => { musicButton.textContent = '▶️ Play Music'; }, 1500);
+                return;
+            }
+            const state = ytPlayer.getPlayerState();
+            // YT states: -1 (unstarted), 0 ended, 1 playing, 2 paused
+            if (state === YT.PlayerState.PLAYING) {
+                ytPlayer.pauseVideo();
+                musicButton.textContent = '▶️ Play Music';
+            } else {
+                // playVideo sẽ được coi là user gesture vì bấm nút
+                ytPlayer.playVideo();
+                musicButton.textContent = '⏸️ Pause Music';
+            }
+        }
+    </script>
 </body>
 </html>
